force-app/main/default/objects/CRMC_PP__ActionGrid_Request__c/CRMC_PP__ActionGrid_Request__c.object-meta.xml
<CustomObject>
    <label>Conga Grid Request</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Conga Grid Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Grid Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>