force-app/main/default/objects/CRMC_PP__ActionGrid_Request__c/fields/CRMC_PP__Message__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Message__c</fullName>
    <description>Full message sent to chatter.</description>
    <label>Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>