force-app/main/default/objects/CRMC_PP__ActionGrid_Request__c/fields/CRMC_PP__OriginalValue__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__OriginalValue__c</fullName>
    <label>OriginalValue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>